--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,98 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
+}
+
+:root {
+    --hoofdKleur: rgb(0, 0, 0);
+    --accentKleur: rgb(255, 236, 248);
+    --achtergrondKleur: rgb(255, 255, 255);
+}
+
+@media (prefers-color-scheme:dark) {
+    :root {
+        --hoofdKleur: rgb(255, 255, 255);
+        --accentKleur: rgb(206, 43, 43);
+        --achtergrondKleur: rgb(0, 0, 0);
     }
-    
-    header{
-        background-color: black;
-        color: white;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      
-      
-    }   
-    
-    header p{
-        padding: 0.3em .5em;
-        box-sizing: border-box;
-    }
-    nav{
+}
+
+body {
+    color: var(--hoofdKleur);
+    background-color: var(--achtergrondKleur);
+}
+
+header {
+    background-color: black;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+
+}
+
+header p {
+    padding: 0.3em .5em;
+    box-sizing: border-box;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
-    
-    
-    
-    }
-    nav ul {
-        display: flex;
-        justify-content: flex-end;
-        text-transform: uppercase;
-        
-       
-    
-    }
-    nav ul li{
+    position: relative;
+
+
+
+}
+
+nav ul {
+    display: flex;
+    justify-content: flex-end;
+    text-transform: uppercase;
+
+
+
+
+}
+
+nav ul li {
     display: flex;
     text-decoration: none;
     padding: 1em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: small;
-    
-    
-    
-    }
-    nav img{
-       height: 2.8em;
-       justify-content: left;
-    
-    
-    }
-    
-    main section {
+    padding-right: 3em;
+
+
+
+
+}
+
+nav img {
+    height: 2.8em;
+    justify-content: left;
+    margin-left: 0.5em;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+
+}
+
+
+
+main section {
     position: relative;
-    max-height: 90vh;  
-    overflow: hidden;  
-    
-    }
-    
-    main section img{
+    max-height: 90vh;
+    overflow: hidden;
+
+}
+
+main section img {
     width: 100%;
-    
-     }
-    
-    section h1{
+
+}
+
+section h1 {
     position: absolute;
     color: rgb(255, 255, 255);
     font-size: 28vw;
@@ -67,178 +100,401 @@
     z-index: 1;
     bottom: 0;
     font-style: oblique;
-    
-    
-    
-     }
-     
-    
-     h2{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        text-transform: uppercase;
-        font-size: small;
-      margin: 1.5em;
-      
-     }
-    
-    main article img{
+
+}
+
+
+h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    font-size: small;
+    margin: 1.5em;
+
+}
+
+main article img {
     display: grid;
     height: 90vw;
-    margin: 5vw;
+    margin: 4vw;
     max-width: 50em;
     max-height: 40em;
-     }
-    
-    footer{
+}
+
+footer {
     background-color: rgb(255, 236, 248);
-    }
-    footer img{
-        width: 90%;
-        margin-left: 2em;
-        max-width: 15em;
-    }
-    
-    footer ul{
-        justify-content:left;
-        padding: 0.01em;
-        text-decoration: none;
-    }
-    
-    footer ul li{
-     text-decoration: none;
-     list-style-type: none;
+    color: #000000;
+}
+
+footer img {
+    width: 90%;
+    margin-left: 2em;
+    max-width: 15em;
+}
+
+footer ul {
+    justify-content: left;
+    padding: 0.01em;
+    text-decoration: none;
+}
+
+footer ul li {
+    text-decoration: none;
+    list-style-type: none;
     padding: 0.4em;
     font-size: small;
-    }
-    
-    article button {
-        background-color: white;
-        padding: 1em;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        position: relative;
-        z-index: 1;
-        /*plaatje met button erop*/
-    }
-    
-    
-    
-    
-    h3{
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: medium;
-        font-weight: 300;
-    }
-    
-    footer p{
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-       padding: 1em;
-    
-    
-      
-    }
-    
-    footer label{
-        color: rgb(65, 65, 65);
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        text-transform: uppercase;
-        margin-left: 1em;
-    }
-    
-    footer input {
+}
+
+article a {
+    background-color: white;
+    padding: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    z-index: 1;
+    /*plaatje met button erop*/
+}
+
+
+
+
+
+
+h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: medium;
+    font-weight: 300;
+}
+
+footer p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 1em;
+
+
+
+}
+
+footer label {
+    color: rgb(65, 65, 65);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    margin-left: 1em;
+}
+
+footer input {
     height: 3em;
     outline-width: 40em;
     background-color: white;
     margin-left: 1em;
-    
-    
-    }
-    footer p:nth-of-type(2){
-       color: rgb(197, 74, 74);
-       font-size: small;
-     
-    }
-    footer p:nth-of-type(3){
-        color: grey;
-        font-size: small;
-    }
-    
-     
-    h4{
+
+
+}
+
+footer p:nth-of-type(2) {
+    color: rgb(197, 74, 74);
+    font-size: small;
+    margin-left: 9em;
+
+}
+
+footer p:nth-of-type(3) {
+    color: grey;
+    font-size: small;
+}
+
+
+h4 {
     margin-top: 2em;
-       line-height: 4em;
-       border-top: 1px solid #000000;
-       text-transform: uppercase;
-       margin-left: 1em;
-    }
-     
-    
-    
-    h3{
-         color: black;
-         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-         margin: 1em;
-         font-size: large;
-         font-weight: 400;
-    }
-    
-    
-    video{
-        display: flex;
+    line-height: 4em;
+    border-top: 1px solid #000000;
+    text-transform: uppercase;
+    margin-left: 1em;
+}
+
+
+
+h3 {
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 1em;
+    font-size: large;
+    font-weight: 400;
+}
+
+
+video {
+    display: flex;
     margin: 0.8em;
     width: 90%;
     max-height: 30em;
     margin-left: 5%;
-       
-    }
-    
-    article p{
-        display: flex;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        margin:  1em;
-        font-size: x-large;
-    
-    }
-    
-    nav a{
-        display: flex;
-        border: 0; 
-        margin: 0; 
-        padding: 0;
-        margin-left: 0em;
-        
-      
-    }
-    a{
-        background-color: white;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-          color: black;
-          border: 1px solid rgb(0, 0, 0);
-          margin-left: 1em;
-          padding: 5% 5%;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-        
-        }
-    
-    
-    /* knop voor producten, grote knoppen*/
-    article button:nth-of-type(2){
+
+}
+
+article p {
     display: flex;
-    left: 1em;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 1em;
+    font-size: large;
+
+
+}
+
+nav a {
+    display: flex;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    margin-left: 0em;
+    position: relative;
+
+
+
+}
+
+a {
+    background-color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    border: 1px solid rgb(0, 0, 0);
+    margin-left: 1em;
+    padding: 5% 5%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+}
+
+
+/* knop voor producten, grote knoppen*/
+article a:nth-of-type(2) {
     width: 16em;
     margin-bottom: 2em;
+    justify-content: center;
+}
+
+article {
+    padding-bottom: 2em;
+}
+
+article a:nth-of-type(1) {
+    color: black;
+
+}
+
+article:first-of-type(1) img:nth-of-type(1) {
+    position: relative;
+    max-height: 40em;
+    max-width: 50em;
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 1fr, 1fr;
+}
+
+article:nth-of-type(2) img:nth-of-type(1) {
+    position: relative;
+    display: grid;
+
+
+}
+
+article span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    margin-top: 14em;
+    margin-left: 7em;
+
+
+}
+
+article:nth-of-type(1) {
+    position: relative;
+    max-height: 40em;
+    max-width: 50em;
+    display: grid;
+    margin-left: 1vw;
+    grid-template-columns: 1fr, 1fr;
+    margin-top: 2em;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+article:nth-of-type(2) {
+    position: relative;
+    max-height: 40em;
+    max-width: 50em;
+    display: grid;
+    flex-wrap: wrap;
+    margin-left: 1vw;
+    grid-template-columns: 1fr, 1fr;
+    flex: 1;
+}
+
+
+
+/* schuif balk stel */
+
+figure {
+    white-space: nowrap;
+    /*zorgt ervoor dat alles in 1 regel blijft*/
+    overflow-x: auto;
+    /* voor hortizontale schuifbalk*/
+    margin-bottom: 2em;
+    margin-left: 0.5em;
+
+
+}
+
+figure img {
+    display: inline-block;
+    margin-right: 15px;
+    margin: 0;
+    padding: 0.5;
+    width: 80%;
+    margin-bottom: 1em;
+    height: 80%;
+}
+
+
+
+
+main ul li {
+    text-decoration: none;
+    margin-top: 2em;
+
+
+}
+
+main ul li img {
+    height: 13em;
+    width: 11em;
+
+}
+
+main ul a {
+    height: 3, 5em;
+    width: 9em;
+    margin: 1em;
+
+}
+
+main ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    list-style: none;
+    padding: 0;
+    margin-left: 0.5em;
+
+}
+
+main ul li p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 1em;
+}
+
+article:nth-last-child(2) img {
+    justify-self: unset;
+    height: 25em;
+    width: 21em;
+    margin-top: 2em;
+    margin-left: 1.2em;
+
+
+}
+
+article:nth-last-child(2) h3 {
+    font-size: x-large;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-display: center;
+    font-weight: 600;
+
+
+}
+
+article:nth-last-child(2) p {
+    font-size: medium;
+    margin-bottom: 2em;
+    margin-left: 1em;
+
+}
+
+article:nth-last-child(2) a:nth-of-type(2) {
+    width: 21.2em;
+    margin-left: 1em;
+
+}
+
+@keyframes logoAnimeren {
+    0% {
+        /*startpunt van de animatie*/
+        scale: 1;
     }
-    
-    article{
-        padding-bottom: 2em;
+
+    20% {
+        scale: 1.1;
     }
-    
-    a:nth-of-type(1){
-        color: blueviolet;
-    
+
+    50% {
+        scale: 1.2;
     }
-    
-    article img{
-    
+
+    80% {
+        scale: 1.1
     }
+
+    100% {
+        /*eindpunt van de animatie*/
+        scale: 1;
+    }
+}
+
+section img:hover {
+    animation-name: logoAnimeren;
+    animation-duration: 7s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+
+
+.hamburger {
+    position: fixed;
+    z-index: 100;
+    top: 2.5em;
+    right: 1em;
+    padding: 0.5em;
+    border: black solid 1px;
+    background: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.closeIcon {
+    display: none;
+}
+
+.menu {
+    position: fixed;
+    transform: translateY(-100%);
+    /*hide the menu by default*/
+    transition: transform 0.3s;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    list-style: none;
+    padding-top: 5em;
+}
+
+.menu a:hover {
+    background-color: rgb(255, 236, 248);
+    padding: 0.2em;
+}
+
+.showMenu {
+    transform: translateY(0);
+    /*Deze class zal erbij of eraf fgaan  van het menu met Javascript om het menu te laten zien er weer te verdwijnen*/
+}
